# cardiorisk_project

./: .gitignore  README.md  main.py  pyproject.toml
.streamlit/: config.toml
app/: Home.py  main.py
app/assets/: styles.css
app/components/: cards.py  theme.py
app/pages/: 1_Analyse_globale.py  2_Analyse_patients.py  3_Modelisation.py  4_Prediction.py  5_A_propos.py
data/processed/: cardio_train.csv  world_death_rate_gdp.csv  world_death_rate_gender.csv  world_death_rate_standardized.csv
data/raw/: cardiovascular-death-rate-vs-gdp-per-capita.csv  cardiovascular-disease-death-rate-over-time-males-vs-females.csv  death-rate-from-cardiovascular-disease-age-standardized-ghe.csv
models/cardio_train/: feature_names.pkl  metrics.json  scaler.pkl
models/heart_disease/: best_model.pkl  feature_names.pkl  metrics.json  scaler.pkl
notebooks/: 01_data_cleaning.ipynb
notebooks/cardio_train/: 01_data_cleaning.ipynb  02_eda.ipynb  03_modeling.ipynb  04_interpretation.ipynb
notebooks/heart_disease/: 01_data_cleaning.ipynb  02_eda.ipynb  03_modeling.ipynb  04_interpretation.ipynb
reports/: presentation_notes.md
src/: clean_world_data.py  data_preprocessing.py  evaluate_model.py  feature_engineering.py  predict.py  train_model.py  utils.py
