[project]
name = "cardiorisk-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "plotly>=5.0.0",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "streamlit>=1.30.0",
]
